hphp/hack/test/typecheck/disallow_array_addition.php
<?hh

function foo(varray<int> $a, varray<int> $b): mixed {
  return $a + $b;
}
